--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  google_mlkit_text_recognition: ^0.13.0
+  camera: ^0.10.5+5
+
    
 
   # The following adds the Cupertino Icons font to your application.
